--- a/views/shows.handlebars
+++ b/views/shows.handlebars
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th>Date</th>
+      <th>City</th>
       <th>Venue</th>
       <th>Contact</th>
       <th>Pay</th>
@@ -21,8 +22,8 @@
 <div class="container">
 <form>
   <div class="form-group">
-    <label for="email">Date:</label>
-    <input type="email" class="form-control" id="email">
+    <label for="date">Date:</label>
+    <input type="date" class="form-control" id="date">
   </div>
   <div class="form-group">
     <label for="pwd">Venue:</label>
