--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>B Boys Merch Tracker</title>
-    <link href="./css/main.css" rel="stylesheet">
+    <link href="http://localhost:8080/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
   </head>
   <body>
@@ -14,9 +14,9 @@
         </div>
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="shows">Shows</a></li>
-          <li><a href="#">Page 2</a></li>
-          <li><a href="#">Page 3</a></li>
+          <li><a href="http://localhost:8080/shows">Shows</a></li>
+          <li><a href="http://localhost:8080/expenses">Expenses</a></li>
+          <li><a href="http://localhost:8080/merch">Merch</a></li>
         </ul>
       </div>
     </nav>
@@ -24,7 +24,7 @@
     {{{body}}}
 
   </body>
-  <script src="./js/jquery-3.1.1.min.js"></script>
+  <script src="http://localhost:8080/js/jquery-3.1.1.min.js"></script>
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="http://localhost:8080/js/script.js"></script>
 </html>
