--- a/views/expenses.handlebars
+++ b/views/expenses.handlebars
@@ -23,26 +23,15 @@
 </div>
 
 <div class="container">
-<form>
+<form id="expense-form">
   <div class="form-group">
-    <label for="date">Date:</label>
-    <input type="date" class="form-control" id="date">
+    <label for="description">Description:</label>
+    <input type="text" class="form-control" id="description">
   </div>
   <div class="form-group">
-    <label for="pwd">Venue:</label>
-    <input type="password" class="form-control" id="pwd">
+    <label for="amount">Amount:</label>
+    <input type="number" class="form-control" id="amount">
   </div>
-  <div class="form-group">
-    <label for="email">Contact:</label>
-    <input type="email" class="form-control" id="email">
-  </div>
-  <div class="form-group">
-    <label for="pwd">Pay:</label>
-    <input type="password" class="form-control" id="pwd">
-  </div>
-  <!-- <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div> -->
-  <button type="submit" class="btn btn-default">Submit</button>
+    <button type="submit" class="btn btn-default">Add Expense</button>
 </form>
 </div>
