--- a/views/shows.handlebars
+++ b/views/shows.handlebars
@@ -32,26 +32,35 @@
 </div>
 
 <div class="container">
-<form>
+<form id="show-form">
   <div class="form-group">
     <label for="date">Date:</label>
     <input type="date" class="form-control" id="date">
   </div>
   <div class="form-group">
-    <label for="pwd">Venue:</label>
-    <input type="password" class="form-control" id="pwd">
+    <label for="city">City:</label>
+    <input type="text" class="form-control" id="city">
   </div>
   <div class="form-group">
-    <label for="email">Contact:</label>
-    <input type="email" class="form-control" id="email">
+    <label for="venue">Venue:</label>
+    <input type="text" class="form-control" id="venue">
   </div>
   <div class="form-group">
-    <label for="pwd">Pay:</label>
-    <input type="password" class="form-control" id="pwd">
+    <label for="contact">Contact:</label>
+    <input type="text" class="form-control" id="contact">
   </div>
-  <!-- <div class="checkbox">
-    <label><input type="checkbox"> Remember me</label>
-  </div> -->
-  <button type="submit" class="btn btn-default">Submit</button>
+  <div class="form-group">
+    <label for="pay">Pay:</label>
+    <input type="number" class="form-control" id="pay">
+  </div>
+  <div class="form-group">
+    <label for="lat">Lat:</label>
+    <input type="text" class="form-control" id="lat">
+  </div>
+  <div class="form-group">
+    <label for="lang">Lang:</label>
+    <input type="text" class="form-control" id="lang">
+  </div>
+  <button type="submit" class="btn btn-default">Add Show</button>
 </form>
 </div>
