add merch routes for single show

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title>B Boys Merch Tracker</title>
     <link href="http://localhost:8080/css/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="http://localhost:8080/css/leaflet.css" />
+    <link rel="stylesheet" href="http://rawgit.com/opencagedata/leaflet-opencage-search/master/dist/css/L.Control.OpenCageSearch.dev.css" />
   </head>
   <body>
     <nav class="navbar navbar-default">
@@ -23,8 +24,9 @@
 
     {{{body}}}
 
+    <script src="http://localhost:8080/js/jquery-3.1.1.min.js"></script>
+    <script src="http://localhost:8080/js/leaflet.js"></script>
+    <script src="http://localhost:8080/js/script.js"></script>
+    <script src="http://rawgit.com/opencagedata/leaflet-opencage-search/master/dist/js/L.Control.OpenCageSearch.dev.js"></script>
   </body>
-  <script src="http://localhost:8080/js/jquery-3.1.1.min.js"></script>
-  <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-  <script src="http://localhost:8080/js/script.js"></script>
 </html>
