--- a/views/merch-single-page.handlebars
+++ b/views/merch-single-page.handlebars
@@ -1,6 +1,7 @@
 <div class="container">
   <h1>{{merch.name}}</h1>
   <h2>{{merch.quantity}}</h2>
+  <h2>{{merch.type}}</h2>
   {{#each merch.sizes}}
     <p>{{size}}: {{quantity}}</p>
   {{/each}}
