--- a/views/shows.handlebars
+++ b/views/shows.handlebars
@@ -38,6 +38,10 @@
     <input type="date" class="form-control" id="date">
   </div>
   <div class="form-group">
+    <label for="address">Address:</label>
+    <input type="text" class="form-control" id="address">
+  </div>
+  <div class="form-group">
     <label for="city">City:</label>
     <input type="text" class="form-control" id="city">
   </div>
