--- a/views/show-single-page.handlebars
+++ b/views/show-single-page.handlebars
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <div class="container">
-    <h1>{{{show.city}}}</h1>
     <h1>{{{show.date}}}</h1>
-    <p>
-        {{{show.id}}}
-    </p>
-    <p>
-      {{#each show.merch}}
-      <p>Item: {{item}}</p>
-        <p>Sold: {{sold}}</p>
-      {{/each}}
-    </p>
+    <h1>{{{show.city}}}</h1>
+    <h1>{{{show.venue}}}</h1>
+    <h4>{{{show.address}}}</h1>
+    <h4>Contact: {{{show.contact}}}</h4>
+    <table class="table">
+        <thead>
+            <tr>
+                {{#each show.merch}}
+                    <th>{{item}}</th>
+                {{/each}}
+            </tr>
+        </thead>
+        <tbody id="shows-table">
+            <tr>
+                {{#each show.merch}}
+                    <td>{{sold}}</td>
+                {{/each}}
+            </tr>
+        </tbody>
+    </table>
 </div>
 
 <div class="container">
@@ -21,65 +31,7 @@
                 <label for="{{name}}">{{name}}:</label>
                 <input type="number" class="form-control" id="{{name}}">
             </div>
-            <!-- <div class="form-group">
-                <label for="city">City:</label>
-                <input type="text" class="form-control" id="city">
-            </div>
-            <div class="form-group">
-                <label for="venue">Venue:</label>
-                <input type="text" class="form-control" id="venue">
-            </div>
-            <div class="form-group">
-                <label for="contact">Contact:</label>
-                <input type="text" class="form-control" id="contact">
-            </div>
-            <div class="form-group">
-                <label for="pay">Pay:</label>
-                <input type="number" class="form-control" id="pay">
-            </div>
-            <div class="form-group">
-                <label for="lat">Lat:</label>
-                <input type="text" class="form-control" id="lat">
-            </div>
-            <div class="form-group">
-                <label for="lang">Lang:</label>
-                <input type="text" class="form-control" id="lang">
-            </div> -->
         {{/each}}
         <button type="submit" class="btn btn-default">Add Merch</button>
     </form>
 </div>
-
-<!-- <div class="container">
-    <form id="single-show-form" data-id="{{show._id}}">
-        <div class="form-group">
-            <label for="address">Address:</label>
-            <input type="text" class="form-control" id="address">
-        </div>
-        <div class="form-group">
-            <label for="city">City:</label>
-            <input type="text" class="form-control" id="city">
-        </div>
-        <div class="form-group">
-            <label for="venue">Venue:</label>
-            <input type="text" class="form-control" id="venue">
-        </div>
-        <div class="form-group">
-            <label for="contact">Contact:</label>
-            <input type="text" class="form-control" id="contact">
-        </div>
-        <div class="form-group">
-            <label for="pay">Pay:</label>
-            <input type="number" class="form-control" id="pay">
-        </div>
-        <div class="form-group">
-            <label for="lat">Lat:</label>
-            <input type="text" class="form-control" id="lat">
-        </div>
-        <div class="form-group">
-            <label for="lang">Lang:</label>
-            <input type="text" class="form-control" id="lang">
-        </div>
-        <button type="submit" class="btn btn-default">Add Show</button>
-    </form>
-</div> -->
