make object in js for init forms

--- a/views/show-single-page.handlebars
+++ b/views/show-single-page.handlebars
@@ -35,3 +35,7 @@
         <button type="submit" class="btn btn-default">Add Merch</button>
     </form>
 </div>
+
+<div class="container">
+    <button type="submit" class="btn btn-default" id="delete-show" data-id="{{show.id}}">Delete Show</button>
+</div>
