--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,11 @@
 body{
   // background-color: blue;
 }
-#mapid { height: 400px; }
+#mapid {
+  height: 400px;
+  box-shadow: 10px 10px black;
+  border: 2px solid black;
+}
 
 form{
   // display: none;
